<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/return_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="right"
                    android:text="@string/return_back"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="delete"
                    android:text="@string/btn_delete"
                    android:textColor="@color/red"
                    android:textSize="20sp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_title"/>

            <EditText
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/light_yellow"
                android:hint="@string/hint_title"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:minLines="2"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="98dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_ingredients"/>

            <EditText
                android:id="@+id/text_ingredients"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/light_yellow"
                android:hint="@string/hint_ingredients"
                android:inputType="textMultiLine"
                android:maxLines="20"
                android:minLines="2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_content" />

            <EditText
                android:id="@+id/text_content"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/light_yellow"
                android:hint="@string/hint_content"
                android:inputType="textMultiLine"
                android:maxLines="20"
                android:minLines="2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="update"
                    android:text="@string/btn_update"
                    android:textColor="@color/black"
                    android:layout_margin="20dp"
                    android:textSize="20sp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>